# Competitive-worker-pool

./: LICENSE  Makefile  PROJECT_STRUCTURE.md  README.md  pyproject.toml  requirements.txt  setup.py
config/: default.yaml
docs/: architecture.md
examples/: advanced_usage.py  basic_usage.py
scripts/: run_examples.py  run_tests.py
src/worker_pool/: __init__.py  exceptions.py
src/worker_pool/core/: __init__.py  graceful_shutdown.py  retry_manager.py  task_channel.py  task_executor.py  worker_manager.py  worker_pool.py
src/worker_pool/models/: __init__.py  pool_metrics.py  task.py  worker.py
src/worker_pool/utils/: __init__.py  config.py  decorators.py  logger.py  monitoring.py
tests/: __init__.py  test_components.py  test_worker_pool.py
